# currencies

./: .codespellrc  .dockerignore  .justfile  Cargo.toml  Dockerfile  README.org  cmp-diff.sh  deny.toml
.github/workflows/: ci.yml  docker.yml
src/: lib.rs  main.rs  tables.json
tests/: e2e.rs  health.rs
