[package]
name = "currencies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10.0"
uuid = { version = "1.3", features = ["serde", "v4"] }
awc = { version = "3", default-features = false, features = ["rustls"] }
rustls = "0.20.8"
service-binding = "1.1.0"
clap = { version = "4.1.8", features = ["derive", "env"] }

[dev-dependencies]
actix-rt = "2.8"
wiremock = "0.5"

[profile.release]
incremental = false
# flags from https://docs.near.org/sdk/rust/building/basics
codegen-units = 1
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

# This is required by cargo vendor during docker builds
[[bin]]
path = "src/main.rs"
name = "main"
