[package]
name = "currencies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
uuid = { version = "1.10", features = ["serde", "v4"] }
service-binding = "3"
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "1"
awc = { version = "3.5", default-features = false, features = ["rustls"] }

[dev-dependencies]
actix-rt = "2.10"
testresult = "0.4"
wiremock = "0.6"

[profile.release]
incremental = false
# flags from https://docs.near.org/sdk/rust/building/basics
codegen-units = 1
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

# This is required by cargo vendor during docker builds
[[bin]]
path = "src/main.rs"
name = "main"
