[package]
name = "currencies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
env_logger = "0.11.3"
uuid = { version = "1.8", features = ["serde", "v4"] }
service-binding = "2.0.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
json_typegen = "0.7.0"
reqwest = { version = "0.12.3", features = ["json"] }
thiserror = "1.0.58"

[dev-dependencies]
actix-rt = "2.9"
testresult = "0.4.0"
wiremock = "0.6"

[profile.release]
incremental = false
# flags from https://docs.near.org/sdk/rust/building/basics
codegen-units = 1
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

# This is required by cargo vendor during docker builds
[[bin]]
path = "src/main.rs"
name = "main"
